<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/myTools"
        android:title="@string/myTools"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/logout"
        android:contentDescription="@string/extended_fab_logout"
        android:title="@string/extended_fab_logout"
        android:visible="true"
        app:showAsAction="never" />
</menu>